--- a/aggiescan/src/components/Menu/Menu.css
+++ b/aggiescan/src/components/Menu/Menu.css
@@ -2,7 +2,7 @@
 .menuContainer{
     display: flex;
     flex-direction: row;
-    background-color:blue;
+    background-color:#022851;
     position:absolute;
     bottom:30px;
     padding: 1em 5em 1em 5em;
@@ -13,9 +13,6 @@
 
   }
   
-.buttonContainer{
-
-}
 
   .menuButton{
     background-color: white;
