--- a/aggiescan/src/pages/home.css
+++ b/aggiescan/src/pages/home.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat&display=swap');
+
+
 .homeContainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 3em 0em 0em 0em;
+    margin: 3em 0em 5em 0em;
 }
 h1{
-    font-size: xx-large;
+    font-size: xxx-large;
+    font-family: Dancing Script, sans-serif;
+    color: #022851;
 }
